--- a/app/views/chat_messages/assets/_form_videos.slim
+++ b/app/views/chat_messages/assets/_form_videos.slim
@@ -1,8 +1,9 @@
 .post-images-wrapper
   - if @chat_videos.present?
     - @chat_videos.each do |video|
-      .image-card
-        = image_tag(video.file_thumbnail_url, data: {'image-url': video.file_thumbnail_url, 'video-id': video.id })
+      - if video.file_url
+        .image-card
+          = image_tag(video.file_thumbnail_url, data: {'image-url': video.file_thumbnail_url, 'video-id': video.id })
   - else
     = link_to 'Your video library is empty', videos_user_video_path(current_user.username)
     
