--- a/app/webpack/stylesheets/groups/index.scss
+++ b/app/webpack/stylesheets/groups/index.scss
@@ -4,6 +4,5 @@
 .content-groups-wrapper {
   display: inline-flex;
   width: 100%;
-  height: calc(100vh - 89px;);
-  // border: 1px solid red;
+  height: calc(100vh - 89px);
 }
