--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -5,6 +5,7 @@ html
     
     meta charset='UTF-8'
     meta name='viewport' content='width = device-width, initial-scale = 1.0, minimum-scale = 1, maximum-scale = 1, user-scalable = no'
+    meta name='propeller' content='02e623513d2818e29c841eedb79fbdae'
     
     = csrf_meta_tags
     = csp_meta_tag
