--- a/app/views/shared/ads/_propeller.html.erb
+++ b/app/views/shared/ads/_propeller.html.erb
@@ -1,1 +1,1 @@
-<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4556147,document.body||document.documentElement)</script>
+<script>(function(d,z,s){s.src='//'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('untimburra.com',4556108,document.createElement('script'))</script>
