--- a/app/views/posts/_show.slim
+++ b/app/views/posts/_show.slim
@@ -10,10 +10,10 @@
       .user-info
         span #{post.user.full_name}
         span #{comment_timestamp(post.created_at)}
-    
+        
     - if !post.is_approved
       p.post-status On approve
-  
+      
   - if post.image_url.present?
     .full-image-wrapper
       = image_tag(post.image_url, class: '', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
@@ -22,7 +22,7 @@
     
   .post-info-panel
     .info-actions
-      .div class="info-panel-value-wrapper"
+      div class='info-panel-value-wrapper'
         - if post.is_lited(current_user)
           = link_to post_post_lits_path(post), method: :delete, remote: true, id: "post-lit-#{post.id}" do
             i.ic.lit.reverse.active
@@ -33,25 +33,24 @@
         span.info-panel-value.color-black #{counter_measurement(post.lits.size)}
         
       .info-panel-value-wrapper.pointer-disable
-        i class=(post.is_commented(current_user) ? "ic comment reverse active" : "ic comment reverse")
+        i class=(post.is_commented(current_user) ? 'ic comment reverse active' : 'ic comment reverse')
         span.info-panel-value.color-black #{counter_measurement(post.comments.size)}
         
       .info-panel-value-wrapper.pointer-disable
-        i class=(post.is_viewed(current_user) ? "ic view reverse" : "ic view reverse")
+        i class=(post.is_viewed(current_user) ? 'ic view reverse' : 'ic view reverse')
         span.info-panel-value.color-black #{counter_measurement(post.views.size)}
-    
-    - if @post.user == current_user
-      .post-notifier-wrapper
-        = form_for @post, url: post_path(@post), method: :patch, remote: :true do |f|
-          label.switch
-            = f.check_box :is_notification
-            span.slider.default.round
-            
-          span.ml-2 Notifications
         
+      div class="#{ current_user ? 'info-panel-value-wrapper' : 'info-panel-value-wrapper pointer-disable' }"
+        - if current_user
+          = link_to shared_records_path(post_id: post.id), remote: true
+            i.ic.share.reverse
+        - else
+          i.ic.share.reverse
+          
   .post-text
     .post-title
       = post.title
     .post-description
       = auto_link(post.description&.gsub(/\n/, '<br>').html_safe, html: { target: '_blank' })
       
+= render 'shared/modals/share_to_members'
