--- a/app/views/shared_records/_members_list.slim
+++ b/app/views/shared_records/_members_list.slim
@@ -18,5 +18,5 @@
             = user.full_name
           .member-is-checked
             label class='big-checkbox-lable'
-              input type='checkbox' id="checkbox-member-#{user.username}" data-username="#{user.username}"
+              input type='checkbox' id="checkbox-member-#{user.username}" data-username="#{user.username}" data-id="#{user.id}"
               .checkmark
