Empty states and some optimizations

--- a/app/views/events/_events.slim
+++ b/app/views/events/_events.slim
@@ -1,5 +1,8 @@
 .events-wrapper
-  - events .each do |event|
+  - if events.blank?
+    p You have no events yet
+
+  - events.each do |event|
     .event-card id="#{event.id}"
       .body
         .event-title
