--- a/app/views/streams/index.slim
+++ b/app/views/streams/index.slim
@@ -1,17 +1,20 @@
 .streams-wrapper.my-4
-  
+
   h4.stream-switcher-title#all-streams-switcher class="#{'active' unless @is_private_stream}" All Streams
   label.switch.news
     - if @is_private_stream
       input#stream-switcher type="checkbox" checked="checked"
     - else
       input#stream-switcher type="checkbox"
-      
+
     span.slider.round
-        
+
   h4.stream-switcher-title#my-streams-switcher class="#{'active' if @is_private_stream}" My Streams
-  
+
   .streams-cards-wrapper
+    - if @streams.blank?
+      p There are no streams yet
+
     - @streams.each do |stream|
       .streams-card value="#{stream.id}"
         .stream-header-panel
@@ -21,16 +24,16 @@
             - if stream.owner == current_user
               = link_to stream_path(stream.access_token), method: :delete, data: { confirm: 'Do you really want to delete this Stream?' } do
                 = image_pack_tag('media/images/icons/ic_delete_object.png')
-              
+
         .streams-image-wrapper
           - if stream.image_url.present?
             = image_tag(stream.image_url, class: 'stream-image', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
           - else
             = image_pack_tag('media/images/placeholders/placeholder-news.png', class: 'stream-image')
-          
+
           .stream-title-panel
             = link_to stream.title, stream_path(stream.access_token)
-          
+
           .stream-info-panel
             .div class="info-panel-value-wrapper"
               - if stream.is_lited(current_user)
@@ -39,17 +42,17 @@
               - else
                 = link_to stream_stream_lits_path(stream_access_token: stream.access_token), method: :post, remote: true, id: "stream-lit-#{stream.id}" do
                   i.ic.lit
-                  
+
               span.info-panel-value #{counter_measurement(stream.lits.size)}
-              
+
             .info-panel-value-wrapper
               = link_to '', class: 'comment-link-icon' do
                 i class=(stream.is_commented(current_user) ? "ic comment active" : "ic comment")
               span.info-panel-value #{counter_measurement(stream.stream_comments.size)}
-              
+
             .info-panel-value-wrapper.pointer-disable
               i class=(stream.is_viewed(current_user) ? "ic view active" : "ic view")
               span.info-panel-value #{counter_measurement(stream.views.size)}
-          
+
   .mt-4.d-flex.justify-content-center
     = paginate @streams
