--- a/app/webpack/stylesheets/_application.scss
+++ b/app/webpack/stylesheets/_application.scss
@@ -53,6 +53,8 @@ $grid-breakpoints: (
 @import 'bootstrap-datepicker/dist/css/bootstrap-datepicker.css';
 @import 'timepicker/jquery.timepicker.css';
 @import 'video.js/dist/video-js.css';
+@import 'cropperjs/dist/cropper.css';
+@import 'select2/dist/css/select2.min.css';
 
 /**************************************
 * Internal fonts:
